# neuronal_models

./: LICENSE  README.md  hodgkin_huxley_demo.py  neuronal_models.py  pyproject.toml
src/pittmath3370/: helper_functions.py  integrate_and_fire.py  izhikevic.py  neuronal_models.py  postprocessing.py
