[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pittmath3370"
version = "0.0.1"
authors = [
    { name ="Noah Bright", email = "noah.bright.1@gmail.com" },
]
description = "Neuronal models for Pitt MATH3370 Mathematical Neuroscience"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/noahmbright/pittmath3370"
Issues = "https://github.com/noahmbright/pittmath3370/issues"
